# Afterburner

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
.devcontainer/: devcontainer.json
src/cpp/: main.cpp
src/cpp/core/: CMakeLists.txt
src/cpp/utils/: CMakeLists.txt
tests/cpp_tests/: CMakeLists.txt
